--- a/mock1.html
+++ b/mock1.html
@@ -20,10 +20,11 @@
         </div>
         
         <div class="col-md-4">
-          <table class="table">
+          <h4>The thing about tables is…</h4>
+          <table class="table table-striped" >
             <tbody>
               <tr>
-                <td>Types of Options</td>
+                <td><strong>Types of Options</strong></td>
               </tr>
               <tr>
                 <td>Choices</td>
@@ -55,15 +56,21 @@
             </div>
           </form>
           
-          <button type="button" class="btn btn-success" style="display: block; width: 100%;">I'm a star</button>
-          <button type="button" class="btn btn-danger" style="display: block; width: 100%;">I'm in trouble</button>
-          <button type="button" class="btn btn-info" style="display: block; width: 100%;">I'm a magnet</button>
+          <button type="button" class="btn btn-success" style="display: block; width: 100%;">
+            <span class="glyphicon glyphicon-star" aria-hidden="true"></span> I'm a star
+          </button>
+          <button type="button" class="btn btn-danger" style="display: block; width: 100%;">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> I'm in trouble
+          </button>
+          <button type="button" class="btn btn-info" style="display: block; width: 100%;">
+          <span class="glyphicon glyphicon-magnet" aria-hidden="true"></span> I'm a magnet
+          </button>
 
 
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><h3 class="text-center">All without a line of css!</h3></div>
+        <div class="col-md-12"><h3 class="text-center"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>All without a line of css!</h3></div>
       </div>
     </div>
   
