--- a/mock2.html
+++ b/mock2.html
@@ -7,6 +7,15 @@
   </head>
   
   <body>
+    <div class="container">
+      <div class="row">Nav</div>
+      <div class="row">Products</div>
+      <div class="row">Content</div>
+      <div class="row">Thirds</div>
+      <div class="row">Interested?</div>
+      <div class="row">Social</div>
+      <div class="row">Copyright</div>
+    </div>
     
   </body>
   
